# am.lightspeedvt.com-spa

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-and-push.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: attribute_mapper.py  lightspeed_api.py  lsvt_user.py  main.py  monday_events.py  path_analyzer.py  redirect_validator.py  seed_dummy_data.py  vetcomm_api.py
backend/app/api/: apl.py  certifications.py  completions_mapping.py  health.py  monday_boards.py  monday_webhook.py  ops_dashboard.py  scan.py  session.py  training_export.py  user_check.py  vetcomm.py
backend/app/core/: __init__.py  admin_auth.py  config.py  logging.py  session.py
backend/app/db/: engine.py  models.py  session.py
backend/app/scripts/: seed_dashboard.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_monday_tables.py
docs/: lms-statement-api.md  monday-integration-plan.md  vetcomm-lms-statement-api-spec.md
features/: README.md  attribute-link-builder.md  certifications.md  check-users.md  completions-mapping.md  path-scanner.md  vetcomm-statement-generator.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js  router.js
frontend/src/components/: CredentialsPanel.vue  LiveMetricsBar.vue  TrendSparkline.vue
frontend/src/composables/: useTheme.js
frontend/src/views/: CertificationsByCertPage.vue  CertificationsByUserPage.vue  (+12 more)
